# SlimSerialRTDE

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SlimSerialRTDEConfig.cmake.in  install.sh  setup.py
cmake/: SlimSerialRTDE.pc.in  SlimSerialRTDECPack.cmake  SlimSerialRTDEConfig.cmake.in  ide.cmake  pch.h.in  utils.cmake  version.rc.in
example/: CMakeLists.txt  cliParser.h  config.ini  main.cpp  modbus_client.cpp  modbus_client.h  speaker.cpp  speaker.h  thread_pool.h  wisson_dummy_server.cpp  wisson_dummy_server.h
example/LiXiang/: monos_configs.yaml
example/SlimArm/: CMakeLists.txt
example/SlimArm/include/: SlimArm.h  SlimArmRTDE.h  SlimArm_Hardware_Simulator.h  SlimSerialServer.h  slimRegister.h
example/SlimArm/src/: SlimArm.cpp  SlimArmRTDE.cpp
example/log/: monos_log.h
example/monos_arm/: ChargerErrorCodes.h  Maxwell_SoftArm_SerialClient.cpp  Maxwell_SoftArm_SerialClient.h  SlimSerialDefines.h  SlimSerialServer.cpp  SlimSerialServer.h  config_center.cpp  config_center.h  mono_arm_config.h  monos_arm.cpp  monos_arm.h  monos_arm_config.h  slimDriveSystemDefines.h  slimRegister.h
example/test_client_server/: CMakeLists.txt  test_client_server.cpp
include/: AsyncSerial.h  SlimAction.h  SlimSerialRTDE.h  slimCircularBuffer.h
include/SlimSerialRTDE/: AsyncSerial.h  SlimAction.h  SlimSerialRTDE.h  slimCircularBuffer.h  thread_safe_queue.h  version.h
src/: AsyncSerial.cpp  SlimAction.cpp  SlimSerialRTDE.cpp
tests/: CMakeLists.txt  includes.h  test_communication.cpp
